--- a/detail-berita.html
+++ b/detail-berita.html
@@ -34,151 +34,6 @@
       </div>
     </header>
     <!-- header -->
-    <!-- content -->
-    <section class="section-galery news-menu">
-      <div class="container">
-        <div class="row mb-3">
-          <div class="col-12">
-            <h5>NEWS</h5>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- content -->
     <!-- navbar -->
     <div class="menus">
       <div class="container d-flex align-items-center">
@@ -233,6 +88,17 @@
     </div>
 
     <!-- navbar -->
+
+    <section class="section-sejarah">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h5>SEJARAH</h5>
+          </div>
+        </div>
+      
+      </div>
+    </section>
     <footer class="section-footer mb-4 border-top">
       <div class="container pt-5 pb-5">
         <div class="row justify-content-center">
