--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="col-lg-12 col-12 section-header">
             <img src="frontend/images/logo.png" alt="LOGO" />
             <h1>MAGISTER</h1>
-            <h1>SEKOLAH TINGGGI PELAYARAN</h1>
+            <h1>SEKOLAH TINGGGI ILMU PELAYARAN</h1>
           </div>
         </div>
       </div>
@@ -250,7 +250,7 @@
                     </p>
                   </div>
                   <div class="dropdown-divider"></div>
-                  <a href="#">Read More...</a>
+                  <a href="detail-berita.html">Read More...</a>
                 </div>
               </div>
               <div class="news-grid">
@@ -281,7 +281,7 @@
                     </p>
                   </div>
                   <div class="dropdown-divider"></div>
-                  <a href="#">Read More...</a>
+                  <a href="detail-berita.html">Read More...</a>
                 </div>
               </div>
 
@@ -313,7 +313,7 @@
                     </p>
                   </div>
                   <div class="dropdown-divider"></div>
-                  <a href="#">Read More...</a>
+                  <a href="detail-berita.html">Read More...</a>
                 </div>
               </div>
               <div class="news-grid">
@@ -344,7 +344,7 @@
                     </p>
                   </div>
                   <div class="dropdown-divider"></div>
-                  <a href="#">Read More...</a>
+                  <a href="detail-berita.html">Read More...</a>
                 </div>
               </div>
               <div class="news-grid">
@@ -375,7 +375,7 @@
                     </p>
                   </div>
                   <div class="dropdown-divider"></div>
-                  <a href="#">Read More...</a>
+                  <a href="detail-berita.html">Read More...</a>
                 </div>
               </div>
               <div class="news-grid">
@@ -406,7 +406,7 @@
                     </p>
                   </div>
                   <div class="dropdown-divider"></div>
-                  <a href="#">Read More...</a>
+                  <a href="detail-berita.html">Read More...</a>
                 </div>
               </div>
             </div>
