--- a/detail-berita.html
+++ b/detail-berita.html
@@ -28,7 +28,7 @@
           <div class="col-lg-12 col-12 section-header">
             <img src="frontend/images/logo.png" alt="LOGO" />
             <h1>MAGISTER</h1>
-            <h1>SEKOLAH TINGGGI PELAYARAN</h1>
+            <h1>SEKOLAH TINGGGI ILMU PELAYARAN</h1>
           </div>
         </div>
       </div>
