--- a/berita.html
+++ b/berita.html
@@ -56,14 +56,17 @@
                 <span>Finacne</span>
                 <h2>Heading Will Be Here</h2>
                 <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
+                    <li>
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
+                    </li>
+                    <li>
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                    </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
+                  </ul>
                 <div class="news-over">
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -89,14 +92,17 @@
                 <span>Finacne</span>
                 <h2>Heading Will Be Here</h2>
                 <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
+                    <li>
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
+                    </li>
+                    <li>
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                    </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
+                  </ul>
                 <div class="news-over">
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -122,14 +128,17 @@
                 <span>Finacne</span>
                 <h2>Heading Will Be Here</h2>
                 <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
+                    <li>
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
+                    </li>
+                    <li>
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                    </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
+                  </ul>
                 <div class="news-over">
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -155,14 +164,17 @@
                 <span>Finacne</span>
                 <h2>Heading Will Be Here</h2>
                 <ul>
-                  <li>
-                    <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
-                    2020
-                  </li>
-                  <li>
-                    <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                  </li>
-                </ul>
+                    <li>
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
+                    </li>
+                    <li>
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                    </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
+                  </ul>
                 <div class="news-over">
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
