--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
                     <li>
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
                   </ul>
                   <div class="news-over">
                     <p>
@@ -271,6 +274,9 @@
                     </li>
                     <li>
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                    </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
                     </li>
                   </ul>
                   <div class="news-over">
@@ -304,6 +310,9 @@
                     <li>
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
                   </ul>
                   <div class="news-over">
                     <p>
@@ -334,6 +343,9 @@
                     </li>
                     <li>
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                    </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
                     </li>
                   </ul>
                   <div class="news-over">
@@ -366,6 +378,9 @@
                     <li>
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
                   </ul>
                   <div class="news-over">
                     <p>
@@ -396,6 +411,9 @@
                     </li>
                     <li>
                       <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                    </li>
+                    <li>
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
                     </li>
                   </ul>
                   <div class="news-over">
