--- a/detail-berita.html
+++ b/detail-berita.html
@@ -86,14 +86,29 @@
         </nav>
       </div>
     </div>
-
+  
     <!-- navbar -->
 
-    <section class="section-sejarah">
+    <section class="section-detail-news ">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h5>SEJARAH</h5>
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
+           <div class="news-grid-txt">
+            <span >Finance</span>
+            <h2>Heading Will Be Here Heading Will Be Here Heading Will Be Here</h2>
+            <ul>
+              <li>
+                <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                19, 2020
+              </li>
+              <li>
+                <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+              </li>
+              <li>
+                <i class="icofont-eye" aria-hidden="true"></i> 2232
+              </li>
+            </ul>
+           </div>
           </div>
         </div>
       
