--- a/berita.html
+++ b/berita.html
@@ -61,10 +61,47 @@
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
+                    <li>
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
+                    </li>
+                    
+                  </ul>
+                <div class="news-over">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                </div>
+                <div class="dropdown-divider"></div>
+                <a href="detail-berita.html">Read More...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-2">
+            <div class="news-grid">
+              <div class="news-grid-image">
+                <img src="frontend/images/image3.jpg" />
+                <div class="news-grid-box">
+                  <h1>19</h1>
+                  <p>Sep</p>
+                </div>
+              </div>
+              <div class="news-grid-txt">
+                <span>Finacne</span>
+                <h2>Heading Will Be Here</h2>
+                <ul>
+                      <li>
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
                     </li>
                     <li>
                       <i class="icofont-eye" aria-hidden="true"></i> 2232
+                    </li>
+                    <li>
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
                     </li>
                   </ul>
                 <div class="news-over">
@@ -92,15 +129,15 @@
                 <span>Finacne</span>
                 <h2>Heading Will Be Here</h2>
                 <ul>
-                    <li>
+                      <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                      <i class="icofont-eye" aria-hidden="true"></i> 2232
                     </li>
                     <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
                     </li>
                   </ul>
                 <div class="news-over">
@@ -128,51 +165,15 @@
                 <span>Finacne</span>
                 <h2>Heading Will Be Here</h2>
                 <ul>
-                    <li>
+                      <li>
                       <i class="icofont-calendar" aria-hidden="true"></i> Sep
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                    </li>
-                    <li>
                       <i class="icofont-eye" aria-hidden="true"></i> 2232
                     </li>
-                  </ul>
-                <div class="news-over">
-                  <p>
-                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
-                    Consequuntur aspernatur reprehenderit velit est voluptatum,
-                    voluptas amet quasi dicta consectetur.
-                  </p>
-                </div>
-                <div class="dropdown-divider"></div>
-                <a href="detail-berita.html">Read More...</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-2">
-            <div class="news-grid">
-              <div class="news-grid-image">
-                <img src="frontend/images/image3.jpg" />
-                <div class="news-grid-box">
-                  <h1>19</h1>
-                  <p>Sep</p>
-                </div>
-              </div>
-              <div class="news-grid-txt">
-                <span>Finacne</span>
-                <h2>Heading Will Be Here</h2>
-                <ul>
                     <li>
-                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
-                      19, 2020
-                    </li>
-                    <li>
-                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
-                    </li>
-                    <li>
-                      <i class="icofont-eye" aria-hidden="true"></i> 2232
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
                     </li>
                   </ul>
                 <div class="news-over">
