--- a/detail-berita.html
+++ b/detail-berita.html
@@ -102,7 +102,7 @@
                 19, 2020
               </li>
               <li>
-                <i class="icofont-ui-user" aria-hidden="true"></i> Admin
+                <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
               </li>
               <li>
                 <i class="icofont-eye" aria-hidden="true"></i> 2232
