--- a/detail-berita.html
+++ b/detail-berita.html
@@ -86,32 +86,66 @@
         </nav>
       </div>
     </div>
-  
+
     <!-- navbar -->
 
-    <section class="section-detail-news ">
+    <section class="section-detail-news">
       <div class="container">
         <div class="row d-flex justify-content-center">
-          <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
-           <div class="news-grid-txt">
-            <span >Finance</span>
-            <h2>Heading Will Be Here Heading Will Be Here Heading Will Be Here</h2>
-            <ul>
-              <li>
-                <i class="icofont-calendar" aria-hidden="true"></i> Sep
-                19, 2020
-              </li>
-              <li>
-                <i class="icofont-ui-user" aria-hidden="true"></i> Michael Ramores Raserva
-              </li>
-              <li>
-                <i class="icofont-eye" aria-hidden="true"></i> 2232
-              </li>
-            </ul>
-           </div>
+          <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <div class="news-grid-txt">
+              <span>Finance</span>
+              <h2>
+                Heading Will Be Here Heading Will Be Here Heading Will Be Here
+              </h2>
+              <ul>
+                <li>
+                  <i class="icofont-calendar" aria-hidden="true"></i> Sep 19,
+                  2020
+                </li>
+                <li>
+                  <i class="icofont-ui-user" aria-hidden="true"></i> Michael
+                  Ramores Raserva
+                </li>
+                <li><i class="icofont-eye" aria-hidden="true"></i> 2232</li>
+              </ul>
+            </div>
+            <div class="post-sharing text-center">
+              <ul class="list-inline">
+                <li>
+                  <button
+                    onClick="window.open('http://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.developphp.com%2Fvideo%2FJavaScript%2FTrigger-CSS-Transitions-to-Control-Animations','sharer','toolbar=0,status=0,width=580,height=400');"
+                    title="Share on Facebook"
+                    class="fb-button btn btn-primary"
+                  >
+                    <i class="icofont-facebook"></i>
+                    Share on Facebook
+                  </button>
+                </li>
+                <li>
+                  <button
+                    onClick="window.open('http://www.twitter.com/intent/tweet?url=https%3A%2F%2Fwww.developphp.com%2Fvideo%2FJavaScript%2FTrigger-CSS-Transitions-to-Control-Animations&amp;text=JavaScript - Trigger CSS Transitions to Control Animations','tweety','toolbar=0,status=0,width=550,height=450');"
+                    title="Tweet this"
+                    class="tw-button btn btn-primary"
+                  >
+                    <i class="icofont-twitter"></i>
+                    <span class="down-mobile">Tweet on Twitter</span>
+                  </button>
+                </li>
+                <li>
+                  <button
+                    onClick="window.location='mailto:?subject=JavaScript - Trigger CSS Transitions to Control Animations&body=Hi, I thought you might like to see this: %0D%0Ahttps://www.developphp.com/video/JavaScript/Trigger-CSS-Transitions-to-Control-Animations';"
+                    title="Send this to an email contact"
+                    class="gp-button btn btn-primary"
+                  >
+                    <i class="icofont-email"></i> Gmail
+                  </button>
+                </li>
+              </ul>
+            </div>
+            <!-- end post-sharing -->
           </div>
         </div>
-      
       </div>
     </section>
     <footer class="section-footer mb-4 border-top">
